Snap dragged window when preview area is shown.

Moved the logic that determine whether the dragged window is inside
the new selector item from WindowGrid to TabletModeWindowDragDelegate.
And do not add the dragged window into overview even if it is inside
the new selector item but preview area is shown.

Bug: 893779
Change-Id: Idb41eefb62f0c1ddd0ccea8b8edef4070b07bb38
Reviewed-on: https://chromium-review.googlesource.com/c/1272448
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598394}
Former-commit-id: b2c60ed9089a196e8decd08c149b36d9b0fcd66d